After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699543 - error dialog doesn't quit when hitting OK
error dialog doesn't quit when hitting OK
Status: RESOLVED FIXED
Product: gcr
Classification: Core
Component: General
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-05-03 02:27 UTC by Tobias Mueller
Modified: 2019-02-22 11:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ui: Made gcr-certificate-renderer close the dialog when clicking okay (1.44 KB, patch)
2013-05-03 02:27 UTC, Tobias Mueller
committed Details | Review

Description Tobias Mueller 2013-05-03 02:27:09 UTC
when trying to export a certificate, to say, "/", it fails and an error appears. One can't get rid of that by clicking ok.
Comment 1 Tobias Mueller 2013-05-03 02:27:39 UTC
Created attachment 243133 [details] [review]
ui: Made gcr-certificate-renderer close the dialog when clicking okay

According to https://developer.gnome.org/gtk3/stable/GtkMessageDialog.html
gtk_widget_destroy is used rather than unref. So we got rid of a helper function,
too.
Comment 2 Stef Walter 2013-06-18 14:14:29 UTC
Thanks!

Attachment 243133 [details] pushed as 3f0b0e3 - ui: Made gcr-certificate-renderer close the dialog when clicking okay