ui: Made gcr-certificate-renderer close the dialog when clicking okay

According to https://developer.gnome.org/gtk3/stable/GtkMessageDialog.html
gtk_widget_destroy is used rather than unref. So we got rid of a helper function,
too.

https://bugzilla.gnome.org/show_bug.cgi?id=699543